==> ExMikuPro/STM32F401RCT6_ST7789V/Core/Src/ST7789/st7789.c <==
#include "st7789.h"
#include <string.h>
#define HOR_LEN    5    //	Also mind the resolution of your screen!

static void ST7789_WriteCommand(uint8_t cmd) {
    ST7789_Select();
    ST7789_DC_Clr();
    HAL_SPI_Transmit(&ST7789_SPI_PORT, &cmd, sizeof(cmd), HAL_MAX_DELAY);
    ST7789_UnSelect();
}

static void ST7789_WriteData(uint8_t *buff, size_t buff_size) {
    ST7789_Select();
    ST7789_DC_Set();

    // split data in small chunks because HAL can't send more than 64K at once

    while (buff_size > 0) {
        uint16_t chunk_size = buff_size > 65535 ? 65535 : buff_size;
#ifdef USE_DMA
        if (DMA_MIN_SIZE <= buff_size) {
            HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, buff, chunk_size);
            while (ST7789_SPI_PORT.hdmatx->State != HAL_DMA_STATE_READY) {}
        } else
            HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#else
        HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#endif
        buff += chunk_size;
        buff_size -= chunk_size;
    }

    ST7789_UnSelect();
}

static void ST7789_WriteSmallData(uint8_t data) {
    ST7789_Select();
    ST7789_DC_Set();
    HAL_SPI_Transmit(&ST7789_SPI_PORT, &data, sizeof(data), HAL_MAX_DELAY);
    ST7789_UnSelect();
}

static void ST7789_SetAddressWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1) {
    ST7789_Select();
    uint16_t x_start = x0 + X_SHIFT, x_end = x1 + X_SHIFT;
    uint16_t y_start = y0 + Y_SHIFT, y_end = y1 + Y_SHIFT;

    /* Column Address set */
    ST7789_WriteCommand(ST7789_CASET);
    {
        uint8_t data[] = {x_start >> 8, x_start & 0xFF, x_end >> 8, x_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }

    /* Row Address set */
    ST7789_WriteCommand(ST7789_RASET);
    {
        uint8_t data[] = {y_start >> 8, y_start & 0xFF, y_end >> 8, y_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }
    /* Write to RAM */
    ST7789_WriteCommand(ST7789_RAMWR);
    ST7789_UnSelect();
}

void ST7789_Init(void) {
#ifdef USE_DMA
    memset(disp_buf, 0, sizeof(disp_buf));
#endif
    HAL_Delay(10);
    ST7789_RST_Clr();
    HAL_Delay(10);
    ST7789_RST_Set();
    HAL_Delay(20);

//    ST7789_WriteCommand(ST7789_COLMOD);		//	Set color mode
//    ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);

    ST7789_WriteCommand(0x36);
    ST7789_WriteSmallData(0x00);
    ST7789_WriteCommand(0x3a);
    ST7789_WriteSmallData(0x05);

    ST7789_WriteCommand(0xB2);                //	Porch control
    {
        uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_SetRotation(ST7789_ROTATION);    //	MADCTL (Display Rotation)

    /* Internal LCD Voltage generator settings */
    ST7789_WriteCommand(0XB7);                //	Gate Control
    ST7789_WriteSmallData(0x35);            //	Default value
    ST7789_WriteCommand(0xBB);                //	VCOM setting
    ST7789_WriteSmallData(0x19);            //	0.725v (default 0.75v for 0x20)
    ST7789_WriteCommand(0xC0);                //	LCMCTRL
    ST7789_WriteSmallData(0x2C);            //	Default value
    ST7789_WriteCommand(0xC2);                //	VDV and VRH command Enable
    ST7789_WriteSmallData(0x01);            //	Default value
    ST7789_WriteCommand(0xC3);                //	VRH set
    ST7789_WriteSmallData(0x12);            //	+-4.45v (defalut +-4.1v for 0x0B)
    ST7789_WriteCommand(0xC4);                //	VDV set
    ST7789_WriteSmallData(0x20);            //	Default value
    ST7789_WriteCommand(0xC6);                //	Frame rate control in normal mode
    ST7789_WriteSmallData(0x0F);            //	Default value (60HZ)
    ST7789_WriteCommand(0xD0);                //	Power control
    ST7789_WriteSmallData(0xA4);            //	Default value
    ST7789_WriteSmallData(0xA1);            //	Default value
    /**************** Division line ****************/

    ST7789_WriteCommand(0xE0);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }

    ST7789_WriteCommand(0xE1);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_WriteCommand(ST7789_INVON);        //	Inversion ON
    ST7789_WriteCommand(ST7789_SLPOUT);    //	Out of sleep mode
    ST7789_WriteCommand(ST7789_NORON);        //	Normal Display on
    ST7789_WriteCommand(ST7789_DISPON);    //	Main screen turned on

    HAL_Delay(50);
    ST7789_Fill_Color(BLACK);                //	Fill with Black.
}

void ST7789_Fill_Color(uint16_t color) {
    uint16_t i;
    ST7789_SetAddressWindow(0, 0, ST7789_WIDTH - 1, ST7789_HEIGHT - 1);
    ST7789_Select();

#ifdef USE_DMA
    for (i = 0; i < ST7789_HEIGHT / HOR_LEN; i++) {
        memset(disp_buf, color, sizeof(disp_buf));
        ST7789_WriteData(disp_buf, sizeof(disp_buf));
    }
#else
    uint16_t j;
    for (i = 0; i < ST7789_WIDTH; i++)
            for (j = 0; j < ST7789_HEIGHT; j++) {
                uint8_t data[] = {color >> 8, color & 0xFF};
                ST7789_WriteData(data, sizeof(data));
            }
#endif
    ST7789_UnSelect();
}
