==> haseebzaib/restaurant_iot_system/application/GUI/lcd_driver/st7789.c <==
#include <stdint.h>
#include <pthread.h>
#include <ti/sysbios/BIOS.h>
#include <ti/drivers/Board.h>
#include <semaphore.h>
#include <unistd.h>
#include <ti/drivers/GPIO.h>
#include <ti/drivers/SPI.h>
#include <ti/display/Display.h>
#include "ti_drivers_config.h"
#include "ugui.h"
#include "st7789.h"
#include "images.h"
#include "Defines.h"
#include "stdio.h"
#include "string.h"
#include "../LVGL_Library/lv_conf.h"
#include "../LVGL_Library/lvgl/lvgl.h"

static void ST7789_WriteCommand(uint8_t cmd)
{

    uint8_t *pbuf = &cmd;
    transaction.count = sizeof(cmd);
    transaction.txBuf = (void *)pbuf;
#ifdef CFG_NO_CS
    GPIO_write(CONFIG_GPIO_CS,0);
#endif
    GPIO_write(CONFIG_GPIO_DC,0);



    SPI_transfer(controllerSpi, &transaction);
#ifdef USE_DMA
                sem_wait(&peripheralSem);
 #endif
#ifdef CFG_NO_CS
    GPIO_write(CONFIG_GPIO_CS,1);
#endif

}

static void ST7789_WriteData(uint8_t *buff, size_t buff_size)
{
#ifdef CFG_NO_CS
        GPIO_write(CONFIG_GPIO_CS,0);
#endif
        GPIO_write(CONFIG_GPIO_DC,1);


#ifdef USE_DMA
        while (buff_size > 0) {
            uint16_t chunk_size = buff_size > 1024 ? 1024 : buff_size;
            transaction.count = chunk_size;
            transaction.txBuf = (void *)buff;

                SPI_transfer(controllerSpi, &transaction);

                sem_wait(&peripheralSem);


                    buff += chunk_size;

            buff_size -= chunk_size;
        }
#else
        transaction.count = buff_size;
                transaction.txBuf = (void *)buff;

                    SPI_transfer(controllerSpi, &transaction);
#endif




#ifdef CFG_NO_CS
        GPIO_write(CONFIG_GPIO_CS,1);
#endif

}

static void ST7789_WriteSmallData(uint8_t data)
{

    transaction.count = sizeof(data);
       transaction.txBuf = (void *)&data;
#ifdef CFG_NO_CS
    GPIO_write(CONFIG_GPIO_CS,0);
#endif
    GPIO_write(CONFIG_GPIO_DC,1);
    SPI_transfer(controllerSpi, &transaction);
#ifdef USE_DMA
                sem_wait(&peripheralSem);
 #endif
#ifdef CFG_NO_CS
    GPIO_write(CONFIG_GPIO_CS,1);
#endif
}

static void ST7789_SetAddressWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1)
{
#ifdef CFG_NO_CS
    GPIO_write(CONFIG_GPIO_CS,0);
#endif
    uint16_t x_start = x0 + X_SHIFT, x_end = x1 + X_SHIFT;
    uint16_t y_start = y0 + Y_SHIFT, y_end = y1 + Y_SHIFT;

    /* Column Address set */
    ST7789_WriteCommand(ST7789_CASET);
    {
        uint8_t data[] = {x_start >> 8, x_start & 0xFF, x_end >> 8, x_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }

    /* Row Address set */
    ST7789_WriteCommand(ST7789_RASET);
    {
        uint8_t data[] = {y_start >> 8, y_start & 0xFF, y_end >> 8, y_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }
    /* Write to RAM */
    ST7789_WriteCommand(ST7789_RAMWR);
#ifdef CFG_NO_CS
    GPIO_write(CONFIG_GPIO_CS,1);
#endif
}

void ST7789_Fill_Color(uint16_t color)
{
    uint16_t i;
    ST7789_SetAddressWindow(0, 0, ST7789_WIDTH - 1, ST7789_HEIGHT - 1);
#ifdef CFG_NO_CS
    GPIO_write(CONFIG_GPIO_CS,0);
#endif
    #ifdef USE_DMA
        for (i = 0; i < ST7789_HEIGHT / HOR_LEN; i++)
        {
            memset(disp_buf, color, sizeof(disp_buf));
         //   ConvHL((uint8_t *)disp_buf,i);
            ST7789_WriteData((uint8_t *)disp_buf, sizeof(disp_buf));
        }
    #else
        uint16_t j;
        for (i = 0; i < ST7789_WIDTH; i++)
                for (j = 0; j < ST7789_HEIGHT; j++) {
                    uint8_t data[] = {color >> 8, color & 0xFF};
                    ST7789_WriteData(data, sizeof(data));
                }
    #endif

#ifdef CFG_NO_CS
        GPIO_write(CONFIG_GPIO_CS,1);
#endif
}

void ST7789_Init(uint_least8_t spi_index)
{
    GPIO_setConfig(CONFIG_GPIO_RST, GPIO_CFG_OUTPUT | GPIO_CFG_OUT_LOW);
    GPIO_setConfig(CONFIG_GPIO_DC,GPIO_CFG_OUTPUT | GPIO_CFG_OUT_LOW);

    spi_index_local = spi_index;

    SPI_Params_init(&spiParams);
    spiParams.frameFormat = SPI_POL1_PHA1;
    spiParams.mode        = SPI_CONTROLLER;
#ifdef USE_DMA
    spiParams.transferMode = SPI_MODE_CALLBACK;
    spiParams.transferCallbackFxn = transferCompleteFxn;
#else
    spiParams.transferMode = SPI_MODE_BLOCKING;
#endif
    spiParams.bitRate     = 5000000;
    spiParams.dataSize    = 8;
    controllerSpi         = SPI_open(spi_index_local, &spiParams);


#ifdef USE_DMA
    sem_init(&peripheralSem, 0, 0);
#endif

    Task_sleep(CLOCK_MS(10));
    GPIO_write(CONFIG_GPIO_RST,0);
    Task_sleep(CLOCK_MS(10));
    GPIO_write(CONFIG_GPIO_RST,1);
    Task_sleep(CLOCK_MS(10));

    UG_Init(&gui, &device);

//    UG_DriverRegister(DRIVER_DRAW_LINE, ST7789_DrawLine);
//    UG_DriverRegister(DRIVER_FILL_FRAME, ST7789_Fill);
//   // UG_DriverRegister(DRIVER_FILL_AREA, ST7789_FillArea);
//    UG_DriverRegister(DRIVER_DRAW_BMP, LCD_DrawImage);



    UG_FontSetHSpace(0);
    UG_FontSetVSpace(0);





    ST7789_WriteCommand(ST7789_COLMOD);     //  Set color mode
        ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);
        ST7789_WriteCommand(0xB2);              //  Porch control
        {
            uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
            ST7789_WriteData(data, sizeof(data));
        }
        ST7789_SetRotation(ST7789_ROTATION);    //  MADCTL (Display Rotation)

        /* Internal LCD Voltage generator settings */
        ST7789_WriteCommand(0XB7);              //  Gate Control
        ST7789_WriteSmallData(0x35);            //  Default value
        ST7789_WriteCommand(0xBB);              //  VCOM setting
        ST7789_WriteSmallData(0x19);            //  0.725v (default 0.75v for 0x20)
        ST7789_WriteCommand(0xC0);              //  LCMCTRL
        ST7789_WriteSmallData (0x2C);           //  Default value
        ST7789_WriteCommand (0xC2);             //  VDV and VRH command Enable
        ST7789_WriteSmallData (0x01);           //  Default value
        ST7789_WriteCommand (0xC3);             //  VRH set
        ST7789_WriteSmallData (0x12);           //  +-4.45v (defalut +-4.1v for 0x0B)
        ST7789_WriteCommand (0xC4);             //  VDV set
        ST7789_WriteSmallData (0x20);           //  Default value
        ST7789_WriteCommand (0xC6);             //  Frame rate control in normal mode
        ST7789_WriteSmallData (0x0F);           //  Default value (60HZ)
        ST7789_WriteCommand (0xD0);             //  Power control
        ST7789_WriteSmallData (0xA4);           //  Default value
        ST7789_WriteSmallData (0xA1);           //  Default value
        /**************** Division line ****************/

        ST7789_WriteCommand(0xE0);
        {
            uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
            ST7789_WriteData(data, sizeof(data));
        }

        ST7789_WriteCommand(0xE1);
        {
            uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
            ST7789_WriteData(data, sizeof(data));
        }
        ST7789_WriteCommand (ST7789_INVON);     //  Inversion ON
        ST7789_WriteCommand (ST7789_SLPOUT);    //  Out of sleep mode
        ST7789_WriteCommand (ST7789_NORON);     //  Normal Display on
        ST7789_WriteCommand (ST7789_DISPON);    //  Main screen turned on

       Task_sleep(CLOCK_MS(50));





          UG_FillScreen(C_WHITE);
              UG_Update();





}
